	(camel_imap_command): Updated the documentation comment
	(camel_imap_command_extended): Before sending a command, first
	check to make sure we are connected; if we aren't, then reconnect.
	Don't strncmp() command with "SELECT" as it's redundant.

	* providers/imap/camel-imap-folder.c: All SELECT calls now pass
	a NULL folder argument to camel_imap_command_extended() since it's
	not needed.

2000-07-15  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (camel_imap_folder_new): 
	One last fix to get rid of hard-coded "/" directory separators

2000-07-14  Jeffrey Stedfast  <fejj@helixcode.com>

	* string-utils.c (string_unquote): New convenience function
	to unquote a string if it's encapsulated by "'s
	
	* providers/imap/camel-imap-folder.c:
	* providers/imap/camel-imap-store.c: Made the necessary changes
	to stop using hard coded directory separators.

2000-07-13  Dan Winship  <danw@helixcode.com>

	* providers/mbox/camel-mbox-summary.c (camel_mbox_summary_load):
	If the summary is for a smaller mbox, and rebuilding from the
	last-known end position fails, try rebuilding from the beginning.
	Deals with the case where the user edits the mbox and makes it
	bigger, without adding new messages.

2000-07-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c: 
	* providers/imap/camel-imap-store.c: If a SELECT fails, set
	imap_store->current_folder to NULL so a SELECT is forced before
	any message/folder operations are requested. Also, because some
	users don't use a namespace, make sure that if the url->path is 
	"/" we don't use it when creating the folder_path.
	(camel_imap_command[_extended]): Since we allow the passing of
	a NULL folder which we can use to bypass a forced SELECT, no need
	to check for the individual commands that don't require a folder
	to be selected.

2000-07-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c: 